--- a/app/views/tmpl/dashboard.html
+++ b/app/views/tmpl/dashboard.html
@@ -73,7 +73,7 @@ text-decoration:none !important;
                   <div easypiechart options="easypiechart2.options" percent="easypiechart2.percent" class="easypiechart" style="width: 140px; height: 140px;">
                     <p class="text-uppercase text-elg mt-20 mb-0" style="line-height: 100px;"><strong class="text-black">TEST</strong></p>
                     <br> <p class="text-light">&nbsp;</p>
-                   <p class="text-uppercase text-elg mt-10 mb-0"><strong class="text-blue">6,175</strong></p><br>
+                   <p class="text-uppercase text-elg mt-10 mb-0"><strong class="text-blue">{{test_flows_count}}</strong></p><br>
 
                   </div>
                 </div>
@@ -83,7 +83,7 @@ text-decoration:none !important;
                   <div easypiechart options="easypiechart3.options" percent="easypiechart3.percent" class="easypiechart" style="width: 140px; height: 140px;">
                     <p class="text-uppercase text-elg mt-20 mb-0" style="line-height: 100px;"><strong class="text-black">PROD</strong></p>
                     <br> <p class="text-light">&nbsp;</p>
-                    <p class="text-uppercase text-elg mt-10 mb-0"><strong class="text-greensea">1632</strong></p><br>
+                    <p class="text-uppercase text-elg mt-10 mb-0"><strong class="text-greensea">{{prod_flows_count}}</strong></p><br>
 
                   </div>
                 </div>
