--- a/app/views/tmpl/config.html
+++ b/app/views/tmpl/config.html
@@ -201,21 +201,19 @@ border: 3px solid #22beef !important;
 										  <div >
 				     <md-content class="md-padding chipsdemoBasicUsage " >
                                          <label >IIB Host</label>
-										 <!-- <input type="text" placeholder="iibhost"  name="iibhost" class="form-control underline-input" ng-model="iibhost" required> -->
           <md-chips ng-model="ctrl.iibhost" > </md-chips>
        </md-content>                                     
 									   </div>
-									     <div class="form-group">
+									     <div >
 				    <md-content class="md-padding chipsdemoBasicUsage " > 
                                          <label>IIB Node</label>
-										<!--  <input type="text" placeholder="IIBNode"  name="IIBNode" class="form-control underline-input" ng-model="IIBNode" required> -->
+										
           <md-chips ng-model="ctrl.IIBNode" > </md-chips>
 </md-content>                                       
 									   </div>
-										 <div class="form-group">
+										 <div >
 				     <md-content class="md-padding chipsdemoBasicUsage " > 
                                          <label >Execution Group</label>
-										<!--  <input type="text" placeholder="executionGroup"  name="executionGroup" class="form-control underline-input" ng-model="executionGroup" required> -->
          <md-chips ng-model="ctrl.executionGroup" > </md-chips>
 </md-content>                                        
 									   </div>
