--- a/app/views/tmpl/viewflow.html
+++ b/app/views/tmpl/viewflow.html
@@ -1696,7 +1696,7 @@ border-radius:10px;
 
     <section class="tilep" style="background-color:white">
                  	 
-  <div class="checkout-wrapp" ng-show="transformstatus">
+  <div class="checkout-wrapp" ng-show="transformstatus" style="width:96%;">
    <br>
   <ul class="checkout-barp" style="margin-bottom:250px">
 
@@ -1722,7 +1722,7 @@ border-radius:10px;
 
  <section class="tilep" style="background-color:white">
                  	 
-  <div class="checkout-wrapp" ng-show="promotestatus">
+  <div class="checkout-wrapp" ng-show="promotestatus" style="width:94%;">
    <br>
   <ul class="checkout-barp" style="margin-bottom:250px">
 
@@ -1748,7 +1748,7 @@ border-radius:10px;
 
  <section class="tilepp"  style="background-color:white">
                  	 
-  <div class="checkout-wrappp" ng-show="transformpromotestatus">
+  <div class="checkout-wrappp" ng-show="transformpromotestatus" style="width:96%;">
    <br>
   <ul class="checkout-barpp" style="margin-bottom:250px">
 
@@ -1795,20 +1795,20 @@ border-radius:10px;
                                       <br>
 									   <div class="col-sm-4 ">
                                       <div class="filled bg-slategray">
-                                      <mark class="bg-white">v17.4</mark>
+                                      <mark class="bg-white">v{{dev_versionno}}</mark>
                                       <h1 class="">Dev</h1>
                                     </div>
                                     </div>
                                       <div class="col-sm-4">
                                         <div class="filled bg-slategray">
-                                        <mark class="bg-white">v19.7</mark>
+                                        <mark class="bg-white">v{{test_versionno}}</mark>
                                         <h1 class="">Test</h1>
                                       </div>
                                       </div>
                                    
                   											<div class="col-sm-4">
                                           <div class="filled bg-slategray">
-                                          <mark class="bg-white">v9.2</mark>
+                                          <mark class="bg-white">v{{prod_versionno}}</mark>
                   											  <h1 class="">Prod</h1>
                                         </div>
                   											</div>
